Complete ClusterType tutorial w/required code refactoring.

--- a/RM/3_1_0/notebooks/Getting Started.ipynb
+++ b/RM/3_1_0/notebooks/Getting Started.ipynb
@@ -22,7 +22,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This notebook will guide you through a logical sequence for you to become familiar with S3Model and how to use the library in your applications to build semantically rich, coherent data models. "
+    "This notebook will guide you through a logical sequence for you to become familiar with S3Model and how to use the library in your applications to build semantically rich, coherent data models. These tutorials provide an introduction only. To become fully versed in the use of S3Model consider taking the online certification course and purchasing the book *Infotropic*. The course includes access to the online *Infotropic Tools Suite* that provides enhanced modeling capability without the need to write code."
    ]
   },
   {
@@ -43,7 +43,9 @@
     "\n",
     "The Xd* datatypes provide the capability of adding ontological, spatial and temporal semantics to simple datatypes.\n",
     "\n",
-    "You should go through each of these interactive notebooks in sequence. Not all features are expressed in each notebook. Each notebook does build on the previous notebooks. "
+    "You should go through each of these interactive notebooks in sequence. Not all features are expressed in each notebook. Each notebook does build on the previous notebooks. \n",
+    "\n",
+    "Reference Ranges and Intervals are covered in the XdQuantity examples."
    ]
   },
   {
@@ -124,7 +126,7 @@
     "\n",
     "There are actually two structural *Items*. The XdAdapterType and the ClusterType. The XdAdapter is used to wrap any XdType so it can be included in a Cluster. When an XdType is used as another attribute, such as a XdStringType being used as a XdCount.units, then it doesn't need the XdAdapterType wrapper. \n",
     "\n",
-    "You have already seen that XdAdapters get created along with the XdType unless the XdType.adapter is specifically set to False."
+    "There is no separate tutorial for XdAdapterTypes."
    ]
   },
   {
@@ -138,14 +140,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Meta Information**"
+    "**Meta Information**\n",
+    "\n",
+    "A data model is incomplete without computable meta-information to provide provenence and trust. This information may include who (person, company, etc.) the data is about, who participated and in what ways, data audit trail, workflow status, attestations of snapshots, protocols used in specifying the model. The components in this section allow the modeler to build any required model to track this information. \n",
+    "\n",
+    "1. [AuditType](Audit%20Examples.ipynb)\n",
+    "1. [AttestationType](Attestation%20Examples.ipynb)\n",
+    "1. [PartyType](Party%20Examples.ipynb)\n",
+    "1. [ParticipationType](Participation%20Examples.ipynb)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Data Model** Wrapper"
+    "The **Data Model** wrapper takes all of the above components and gathers them into one cohesive, computable, shareable document like structure. This includes meta-data concerning the design of the model (author, licensing, publication, etc. \n",
+    "\n",
+    "This data provides down-stream users of the information to fully understand the meaning of the data and do so without manual intervention, re-interpreting and retyping the meta-data.\n",
+    "\n",
+    "1.  [DMType](DM%20Examples.ipynb)"
    ]
   },
   {
@@ -157,9 +170,84 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "<style>\n",
+       "    @import url(http://fonts.googleapis.com/css?family=Roboto:400,300,300italic,400italic,700,700italic);\n",
+       "\n",
+       "    div.cell{\n",
+       "        font-family:'roboto','helvetica','sans';\n",
+       "        color:#444;\n",
+       "        width:800px;\n",
+       "        margin-left:16% !important;\n",
+       "        margin-right:auto;\n",
+       "    }\n",
+       "\n",
+       "    div.text_cell_render{\n",
+       "        font-family: 'roboto','helvetica','sans';\n",
+       "        line-height: 145%;\n",
+       "        font-size: 120%;\n",
+       "        color:#444;\n",
+       "        width:800px;\n",
+       "        margin-left:auto;\n",
+       "        margin-right:auto;\n",
+       "    }\n",
+       "    .CodeMirror{\n",
+       "            font-family: \"Menlo\", source-code-pro,Consolas, monospace;\n",
+       "    }\n",
+       "    .prompt{\n",
+       "        display: None;\n",
+       "    }    \n",
+       "    .warning{\n",
+       "        color: rgb( 240, 20, 20 )\n",
+       "        }\n",
+       "        \n",
+       "    .logo-container {\n",
+       "        display: flex;\n",
+       "        flex-wrap: wrap;\n",
+       "        }\n",
+       "        \n",
+       "        .logo {\n",
+       "        flex: 0 0 50%;\n",
+       "        padding: 10px;\n",
+       "        vertical-align: middle;\n",
+       "        }\n",
+       "        \n",
+       "        * {\n",
+       "        margin: 0;\n",
+       "        box-sizing: border-box;\n",
+       "          }\n",
+       "</style>\n",
+       "<script>\n",
+       "    MathJax.Hub.Config({\n",
+       "                        TeX: {\n",
+       "                           extensions: [\"AMSmath.js\"]\n",
+       "                           },\n",
+       "                tex2jax: {\n",
+       "                    inlineMath: [ ['$','$'], [\"\\\\(\",\"\\\\)\"] ],\n",
+       "                    displayMath: [ ['$$','$$'], [\"\\\\[\",\"\\\\]\"] ]\n",
+       "                },\n",
+       "                displayAlign: 'center', // Change this to 'center' to center equations.\n",
+       "                \"HTML-CSS\": {\n",
+       "                    styles: {'.MathJax_Display': {\"margin\": 4}}\n",
+       "                }\n",
+       "        });\n",
+       "</script>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from IPython.core.display import HTML\n",
     "def css_styling():\n",
@@ -167,6 +255,13 @@
     "    return HTML(styles)\n",
     "css_styling()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
