--- a/RM/3_1_0/notebooks/XdTemporal Examples.ipynb
+++ b/RM/3_1_0/notebooks/XdTemporal Examples.ipynb
@@ -91,6 +91,7 @@
     "d.cardinality = ('month_day', (0,0))\n",
     "d.cardinality = ('duration', (0,0))\n",
     "print(d)\n",
+    "print('\\n\\n')\n",
     "print(d.asXSD())"
    ]
   },
@@ -123,6 +124,7 @@
     "d.cardinality = ('month_day', (0,0))\n",
     "d.cardinality = ('duration', (0,0))\n",
     "print(d)\n",
+    "print('\\n\\n')\n",
     "print(d.asXSD())"
    ]
   }
