Complete first basic, valid model.

--- a/RM/3_1_0/notebooks/Getting Started.ipynb
+++ b/RM/3_1_0/notebooks/Getting Started.ipynb
@@ -14,6 +14,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Using the tutorials\n",
+    "There are some great things about notebooks and some drawbacks. \n",
+    "It is important to realize that using S3Model in a notebook is **not** the recommended approach. You should write an appropriate application to build a model. \n",
+    "\n",
+    "When executing the tutorials you **must** always execute the cells in the sequence from top to bottom. Anything else is precarious. If you want to experiment with changing values in a cell then be sure to use the *Cell->Run All Above* option from the menu.  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "\n",
     "# Getting Started with S3Model\n"
    ]
