--- a/RM/3_1_0/notebooks/XdBoolean Examples.ipynb
+++ b/RM/3_1_0/notebooks/XdBoolean Examples.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -50,14 +50,212 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "scrolled": false,
     "slideshow": {
      "slide_type": "slide"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on class XdBooleanType in module s3m_xdt:\n",
+      "\n",
+      "class XdBooleanType(XdAnyType)\n",
+      " |  XdBooleanType(label: str, opt: dict)\n",
+      " |  \n",
+      " |  An enumerated type which represents boolean decisions such as true/false\n",
+      " |  or yes/no answers.\n",
+      " |  \n",
+      " |  Useful where it is essential to devise the meanings (often questions in\n",
+      " |  subjective data) carefully so that the only allowed result values result\n",
+      " |  in one of the options; true or false but are presented to the user as\n",
+      " |  a list of options.\n",
+      " |  \n",
+      " |  The possible choices for True or False are values in a dictionary.\n",
+      " |  The class defines 'true_value' and 'false_value'.\n",
+      " |  The instance implementation is restricted to only have a value for one of\n",
+      " |  them based on the user choice from the options dictionary.\n",
+      " |  \n",
+      " |  The XdBooleanType should not be used as a replacement for enumerated choice\n",
+      " |  types such as male/female, or similar choice sets.\n",
+      " |  Such values should be modeled as XdStrings with enumerations and may reference\n",
+      " |  a controlled vocabulary.\n",
+      " |  In any case, the choice set often has more than two values.\n",
+      " |  \n",
+      " |  Method resolution order:\n",
+      " |      XdBooleanType\n",
+      " |      XdAnyType\n",
+      " |      abc.ABC\n",
+      " |      builtins.object\n",
+      " |  \n",
+      " |  Methods defined here:\n",
+      " |  \n",
+      " |  __init__(self, label: str, opt: dict)\n",
+      " |      Create an instance of a XdBooleanType.\n",
+      " |      \n",
+      " |      Parameters\n",
+      " |      ----------\n",
+      " |      label: str\n",
+      " |          A human readable name lending semantics to the purpose of the model.\n",
+      " |      opt: dictionary\n",
+      " |          A dictionary where the two allowed keys are 'trues' and 'falses'.\n",
+      " |          The items associated with these keys are a list of options for the user to\n",
+      " |          choose from.\n",
+      " |  \n",
+      " |  asJSONex(self)\n",
+      " |      Return an example JSON fragment for this model based on the asXMLex method.\n",
+      " |  \n",
+      " |  asXML(self)\n",
+      " |      Return an example XML fragment for this model.\n",
+      " |  \n",
+      " |  asXMLex(self)\n",
+      " |      Return an example XML fragment for this model.\n",
+      " |      \n",
+      " |      The core elements are included even though they may not be\n",
+      " |      required via cardinality. Therefore this example may be considerably\n",
+      " |      larger than an actual implementation.\n",
+      " |  \n",
+      " |  asXSD(self)\n",
+      " |      Return a XML Schema complexType definition.\n",
+      " |  \n",
+      " |  validate(self)\n",
+      " |      Every XdType must implement this method.\n",
+      " |  \n",
+      " |  ----------------------------------------------------------------------\n",
+      " |  Data descriptors defined here:\n",
+      " |  \n",
+      " |  false_value\n",
+      " |      A string that represents a boolean False in the implementation.\n",
+      " |      These are constrained by a set of enumerations.\n",
+      " |  \n",
+      " |  true_value\n",
+      " |      A string that represents a boolean True in the implementation.\n",
+      " |      These are constrained by a set of enumerations.\n",
+      " |  \n",
+      " |  ----------------------------------------------------------------------\n",
+      " |  Data and other attributes defined here:\n",
+      " |  \n",
+      " |  __abstractmethods__ = frozenset()\n",
+      " |  \n",
+      " |  ----------------------------------------------------------------------\n",
+      " |  Methods inherited from XdAnyType:\n",
+      " |  \n",
+      " |  __str__(self)\n",
+      " |      Return str(self).\n",
+      " |  \n",
+      " |  asJSON(self)\n",
+      " |      Return an example JSON fragment for this model.\n",
+      " |  \n",
+      " |  ----------------------------------------------------------------------\n",
+      " |  Data descriptors inherited from XdAnyType:\n",
+      " |  \n",
+      " |  __dict__\n",
+      " |      dictionary for instance variables (if defined)\n",
+      " |  \n",
+      " |  __weakref__\n",
+      " |      list of weak references to the object (if defined)\n",
+      " |  \n",
+      " |  act\n",
+      " |      Access Control Tag. If this is used it must contain a valid term from\n",
+      " |      the Access Control System linked to by the containing Data Model\n",
+      " |      'acs' attribute.\n",
+      " |  \n",
+      " |  acuid\n",
+      " |      The unique identifier of the wrapping XdAdapter of the component.\n",
+      " |  \n",
+      " |  adapter\n",
+      " |      When True, creates an XdAdapterType wrapper.\n",
+      " |  \n",
+      " |  cardinality\n",
+      " |      The cardinality status values.\n",
+      " |      \n",
+      " |      The setter method can be called by each subclass to add cardinality\n",
+      " |      values for each element or change the defaults.\n",
+      " |      Some elements cardinality may not be changed.\n",
+      " |      Ex: XdBoolean elements are not modifiable.\n",
+      " |      \n",
+      " |      The cardinality dictionary uses a string representation of each\n",
+      " |      property name and a tuple as the value.\n",
+      " |      \n",
+      " |      The value passed into the setter is a tuple with v[0] as a string (key) and\n",
+      " |      v[1] as a tuple containing an integer set representing the\n",
+      " |      (minimum, maximum) values. The entire tuple is replaced in the dictionary.\n",
+      " |      \n",
+      " |      Examples\n",
+      " |      --------\n",
+      " |      \n",
+      " |      ('vtb', (1,1)) will set the vtb value to be required.\n",
+      " |      \n",
+      " |      \n",
+      " |      NOTES\n",
+      " |      -----\n",
+      " |      \n",
+      " |      The cardinality for latitude and longitude are combined into one\n",
+      " |      setting called 'location'.\n",
+      " |      \n",
+      " |      The Python value of 'None' represents the 'unbounded' XML Schema value.\n",
+      " |      The 'unbounded' value is allowed on only a few attributes.\n",
+      " |  \n",
+      " |  definition_url\n",
+      " |      The primary definition URL for the model.\n",
+      " |      Cannot be an IP address.\n",
+      " |  \n",
+      " |  docs\n",
+      " |      The human readable documentation string describing the purpose of\n",
+      " |      the model.\n",
+      " |  \n",
+      " |  ev\n",
+      " |      In an invalid instance, the application can indicate here why data is\n",
+      " |      missing or invalid.\n",
+      " |      The sub-types are based on ISO 21090 NULL Flavors entries, with\n",
+      " |      additions noted from real-world usage.\n",
+      " |  \n",
+      " |  label\n",
+      " |      The semantic name of the component.\n",
+      " |  \n",
+      " |  latitude\n",
+      " |      Latitude in decimal format. Value range -90.000000 to 90.000000.\n",
+      " |  \n",
+      " |  longitude\n",
+      " |      Longitude in decimal format. Value range -180.000000 to 180.000000.\n",
+      " |  \n",
+      " |  mcuid\n",
+      " |      The unique identifier of the component.\n",
+      " |  \n",
+      " |  modified\n",
+      " |      Time Modified. If present this must be a valid date-time stamp.\n",
+      " |      It is used to indicate the date and time the data was last changed.\n",
+      " |  \n",
+      " |  pred_obj_list\n",
+      " |      A list of additional predicate object pairs to describe the component.\n",
+      " |      \n",
+      " |      Each list item is a tuple where 0 is the predicate and 1 is the object.\n",
+      " |      \n",
+      " |      Example:\n",
+      " |      ('rdf:resource','https://www.niddk.nih.gov/health-information/health-statistics')\n",
+      " |      The setter accepts the tuple and appends it to the list.\n",
+      " |      If an empty list is supplied it resets the value to the empty list.\n",
+      " |  \n",
+      " |  tr\n",
+      " |      Time Recorded. If present this must be a valid date-time.\n",
+      " |      It is used to indicate the initial date and time the data was recorded.\n",
+      " |  \n",
+      " |  vtb\n",
+      " |      Valid Time Begin. If present this must be a valid datetime including timezone.\n",
+      " |      It is used to indicate the beginning time that information is considered valid.\n",
+      " |  \n",
+      " |  vte\n",
+      " |      Valid Time End. If present this must be a valid date-time including timezone.\n",
+      " |      It is used to indicate the ending time that information is considered valid\n",
+      " |      or the time the information expired or will expire.\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "help(XdBooleanType)"
    ]
@@ -77,13 +275,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "XdBooleanType : Can it happen here?, ID: cjn6nb7jk00069x8paa3wmpqd\n"
+     ]
+    }
+   ],
    "source": [
     "opt = {'trues':['Yes','Maybe','Possible'], 'falses':['No','Unlikely','Impossible']}\n",
     "d = XdBooleanType('Can it happen here?', opt)\n",
