--- a/RM/3_1_0/notebooks/XdCount Examples.ipynb
+++ b/RM/3_1_0/notebooks/XdCount Examples.ipynb
@@ -139,7 +139,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "# create the units model\n",
@@ -155,7 +157,6 @@
     "d.units = u\n",
     "d.min_inclusive = 0 # cannot have a negative value\n",
     "d.max_inclusive = 100 # cannot have a value over 100\n",
-    "\n",
     "print(d)"
    ]
   },
