--- a/RM/3_1_0/notebooks/XdQuantity Examples.ipynb
+++ b/RM/3_1_0/notebooks/XdQuantity Examples.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -50,14 +50,225 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "scrolled": false,
     "slideshow": {
      "slide_type": "slide"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on class XdQuantityType in module s3m_xdt:\n",
+      "\n",
+      "class XdQuantityType(XdQuantifiedType)\n",
+      " |  XdQuantityType(label)\n",
+      " |  \n",
+      " |  Quantified type representing specific quantities, i.e. quantities expressed as a magnitude and units. Can also be used for time durations, where it is more convenient to treat these as simply a number of individual seconds, minutes, hours, days, months, years, etc. when no temporal calculation is to be performed.\n",
+      " |  \n",
+      " |  Method resolution order:\n",
+      " |      XdQuantityType\n",
+      " |      XdQuantifiedType\n",
+      " |      XdOrderedType\n",
+      " |      XdAnyType\n",
+      " |      abc.ABC\n",
+      " |      builtins.object\n",
+      " |  \n",
+      " |  Methods defined here:\n",
+      " |  \n",
+      " |  __init__(self, label)\n",
+      " |      The semantic label (name of the model) is required.\n",
+      " |  \n",
+      " |  asXML(self)\n",
+      " |      Return an example XML fragment for this model.\n",
+      " |  \n",
+      " |  asXSD(self)\n",
+      " |      Return a XML Schema complexType definition.\n",
+      " |  \n",
+      " |  ----------------------------------------------------------------------\n",
+      " |  Data descriptors defined here:\n",
+      " |  \n",
+      " |  fraction_digits\n",
+      " |      A maximum fraction digits constraint.\n",
+      " |  \n",
+      " |  max_exclusive\n",
+      " |      An exclusive maximum value.\n",
+      " |  \n",
+      " |  max_inclusive\n",
+      " |      An inclusive maximum value.\n",
+      " |  \n",
+      " |  min_exclusive\n",
+      " |      An exclusive minimum value.\n",
+      " |  \n",
+      " |  min_inclusive\n",
+      " |      An inclusive minimum value.\n",
+      " |  \n",
+      " |  total_digits\n",
+      " |      A maximum total digits constraint.\n",
+      " |  \n",
+      " |  units\n",
+      " |      The name or type of the quantity. Examples are \"kg/m2\", “mmHg\", \"ms-1\", \"km/h\".\n",
+      " |      May or may not come from a standard terminology.\n",
+      " |  \n",
+      " |  value\n",
+      " |      Numeric value of the quantity.\n",
+      " |  \n",
+      " |  ----------------------------------------------------------------------\n",
+      " |  Data and other attributes defined here:\n",
+      " |  \n",
+      " |  __abstractmethods__ = frozenset()\n",
+      " |  \n",
+      " |  ----------------------------------------------------------------------\n",
+      " |  Data descriptors inherited from XdQuantifiedType:\n",
+      " |  \n",
+      " |  accuracy\n",
+      " |      Accuracy of the value in the magnitude attribute in the range 0% to (+/-)100%.\n",
+      " |      A value of 0 means that the accuracy is unknown.\n",
+      " |  \n",
+      " |  error\n",
+      " |      Error margin of measurement, as an integer indicating error in the recording method or instrument (+/- %).\n",
+      " |      A logical value of 0 indicates 100% accuracy, i.e. no error.\n",
+      " |  \n",
+      " |  magnitude_status\n",
+      " |      MagnitudeStatus provides a general indication of the accuracy of the magnitude expressed in the XdQuantified\n",
+      " |      subtypes. Should be used to inform users and not for decision support uses.\n",
+      " |      Must be one of: None,'equal','less_than', 'greater_than', 'less_than_or_equal', 'greater_than_or_equal', 'approximate'\n",
+      " |  \n",
+      " |  ----------------------------------------------------------------------\n",
+      " |  Data descriptors inherited from XdOrderedType:\n",
+      " |  \n",
+      " |  normal_status\n",
+      " |      Optional normal status indicator of value with respect to normal range\n",
+      " |      for this value.\n",
+      " |      \n",
+      " |      Often used in situations such as medical lab results when coded by\n",
+      " |      ordinals in series such as; HHH, HH, H, (nothing), L, LL, LLL, etc.\n",
+      " |  \n",
+      " |  referenceranges\n",
+      " |      Optional list of ReferenceRanges for this value in its\n",
+      " |      particular measurement context.\n",
+      " |  \n",
+      " |  ----------------------------------------------------------------------\n",
+      " |  Methods inherited from XdAnyType:\n",
+      " |  \n",
+      " |  __str__(self)\n",
+      " |      Return str(self).\n",
+      " |  \n",
+      " |  asJSON(self)\n",
+      " |      Return an example JSON fragment for this model.\n",
+      " |  \n",
+      " |  validate(self)\n",
+      " |      Every XdType must implement this method.\n",
+      " |  \n",
+      " |  ----------------------------------------------------------------------\n",
+      " |  Data descriptors inherited from XdAnyType:\n",
+      " |  \n",
+      " |  __dict__\n",
+      " |      dictionary for instance variables (if defined)\n",
+      " |  \n",
+      " |  __weakref__\n",
+      " |      list of weak references to the object (if defined)\n",
+      " |  \n",
+      " |  act\n",
+      " |      Access Control Tag. If this is used it must contain a valid term from\n",
+      " |      the Access Control System linked to by the containing Data Model\n",
+      " |      'acs' attribute.\n",
+      " |  \n",
+      " |  acuid\n",
+      " |      The unique identifier of the wrapping XdAdapter of the component.\n",
+      " |  \n",
+      " |  adapter\n",
+      " |      When True, creates an XdAdapterType wrapper.\n",
+      " |  \n",
+      " |  cardinality\n",
+      " |      The cardinality status values.\n",
+      " |      \n",
+      " |      The setter method can be called by each subclass to add cardinality\n",
+      " |      values for each element or change the defaults.\n",
+      " |      Some elements cardinality may not be changed.\n",
+      " |      Ex: XdBoolean elements are not modifiable.\n",
+      " |      \n",
+      " |      The cardinality dictionary uses a string representation of each\n",
+      " |      property name and a tuple as the value.\n",
+      " |      \n",
+      " |      The value passed into the setter is a tuple with v[0] as a string (key) and\n",
+      " |      v[1] as a tuple containing an integer set representing the\n",
+      " |      (minimum, maximum) values. The entire tuple is replaced in the dictionary.\n",
+      " |      \n",
+      " |      Examples\n",
+      " |      --------\n",
+      " |      \n",
+      " |      ('vtb', (1,1)) will set the vtb value to be required.\n",
+      " |      \n",
+      " |      \n",
+      " |      NOTES\n",
+      " |      -----\n",
+      " |      \n",
+      " |      The cardinality for latitude and longitude are combined into one\n",
+      " |      setting called 'location'.\n",
+      " |      \n",
+      " |      The Python value of 'None' represents the 'unbounded' XML Schema value.\n",
+      " |      The 'unbounded' value is allowed on only a few attributes.\n",
+      " |  \n",
+      " |  definition_url\n",
+      " |      The primary definition URL for the model.\n",
+      " |      Cannot be an IP address.\n",
+      " |  \n",
+      " |  docs\n",
+      " |      The human readable documentation string describing the purpose of\n",
+      " |      the model.\n",
+      " |  \n",
+      " |  ev\n",
+      " |      In an invalid instance, the application can indicate here why data is\n",
+      " |      missing or invalid.\n",
+      " |      The sub-types are based on ISO 21090 NULL Flavors entries, with\n",
+      " |      additions noted from real-world usage.\n",
+      " |  \n",
+      " |  label\n",
+      " |      The semantic name of the component.\n",
+      " |  \n",
+      " |  latitude\n",
+      " |      Latitude in decimal format. Value range -90.000000 to 90.000000.\n",
+      " |  \n",
+      " |  longitude\n",
+      " |      Longitude in decimal format. Value range -180.000000 to 180.000000.\n",
+      " |  \n",
+      " |  mcuid\n",
+      " |      The unique identifier of the component.\n",
+      " |  \n",
+      " |  modified\n",
+      " |      Time Modified. If present this must be a valid date-time stamp.\n",
+      " |      It is used to indicate the date and time the data was last changed.\n",
+      " |  \n",
+      " |  pred_obj_list\n",
+      " |      A list of additional predicate object pairs to describe the component.\n",
+      " |      \n",
+      " |      Each list item is a tuple where 0 is the predicate and 1 is the object.\n",
+      " |      \n",
+      " |      Example:\n",
+      " |      ('rdf:resource','https://www.niddk.nih.gov/health-information/health-statistics')\n",
+      " |      The setter accepts the tuple and appends it to the list.\n",
+      " |      If an empty list is supplied it resets the value to the empty list.\n",
+      " |  \n",
+      " |  tr\n",
+      " |      Time Recorded. If present this must be a valid date-time.\n",
+      " |      It is used to indicate the initial date and time the data was recorded.\n",
+      " |  \n",
+      " |  vtb\n",
+      " |      Valid Time Begin. If present this must be a valid datetime including timezone.\n",
+      " |      It is used to indicate the beginning time that information is considered valid.\n",
+      " |  \n",
+      " |  vte\n",
+      " |      Valid Time End. If present this must be a valid date-time including timezone.\n",
+      " |      It is used to indicate the ending time that information is considered valid\n",
+      " |      or the time the information expired or will expire.\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "help(XdQuantityType)"
    ]
@@ -77,9 +288,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ValidationError",
+     "evalue": "XdQuantityType : Currency Amount failed validation.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValidationError\u001b[0m                           Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-3-331dca5268b3>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     16\u001b[0m \u001b[0md\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmin_inclusive\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m0\u001b[0m  \u001b[0;31m# can't have a negative amount\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     17\u001b[0m \u001b[0md\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfraction_digits\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m2\u001b[0m \u001b[0;31m# currency is recorded with only two decimal places\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 18\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0md\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m~/DII/S3Model/RM/3_1_0/pylib/s3m_xdt.py\u001b[0m in \u001b[0;36m__str__\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    338\u001b[0m             \u001b[0;32mreturn\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__class__\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__name__\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m' : '\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlabel\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m', ID: '\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmcuid\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    339\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 340\u001b[0;31m             \u001b[0;32mraise\u001b[0m \u001b[0mValidationError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__class__\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__name__\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m' : '\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlabel\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m\" failed validation.\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    341\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    342\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mvalidate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mValidationError\u001b[0m: XdQuantityType : Currency Amount failed validation."
+     ]
+    }
+   ],
    "source": [
     "# create the units model\n",
     "u = XdStringType('Currency Codes')\n",
